--- a/src/pages/DeleteChannel.css
+++ b/src/pages/DeleteChannel.css
@@ -1,11 +1,17 @@
-.delete-channel-row {
+.delete-channel .delete-channel-row {
   margin-bottom: 0.5rem;
 }
 
-.delete-channel-name {
+.delete-channel .delete-channel-name {
   border-radius: 0.25rem;
   padding: 1rem 0.25rem;
   background: #F9F9F9;
+
+  font-size: 1.75rem;
+  font-weight: bold;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .delete-channel .button {
